--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -22,6 +22,7 @@
 @import "pf-basic-tags";
 @import "node_modules/bootstrap/scss/jumbotron";
 @import "node_modules/bootstrap/scss/alert";
+@import "pf-component-alert";
 @import "node_modules/bootstrap/scss/progress";
 @import "node_modules/bootstrap/scss/media";
 @import "node_modules/bootstrap/scss/list-group";
