Updates view selector documentation

--- a/source/scss/_pf-component-view-selector.scss
+++ b/source/scss/_pf-component-view-selector.scss
@@ -10,8 +10,7 @@
 .pf-view-selector__btn-link {
   color: $color-pf-black-900;
   font-size: $font-size-relative-base;
-  //line-height: 1;
-  padding: $pf-spacer-xxxs 0;
+  padding: 0;
   &:active,
   &:focus,
   &:hover { color: $link-color; }
