initial draft of a kebab pattern and a card pattern

--- a/source/_patterns/basics/dropdowns/00-dropdown.hbs
+++ b/source/_patterns/basics/dropdowns/00-dropdown.hbs
@@ -1,8 +1,12 @@
-<div class="dropdown {{ dropdownState }}" aria-labelledby="{{ dropdownAriaLabelledby }}">
-  <button type="button" class="btn {{ btnClass }} dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    {{ dropdownText }}
+<div class="dropdown {{ dropdownState }} {{#if isKebab}}pf-dropdown__kebab{{/if}} {{#if pullright}}pull-right{{/if}}" aria-labelledby="{{ dropdownAriaLabelledby }}">
+  <button type="button" class="btn {{#if isKebab}}btn-link{{else}}{{ btnClass }}{{/if}}  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    {{#if isKebab}}
+      <span class="fa fa-ellipsis-v"></span>
+    {{else}}
+      {{ dropdownText }}
+    {{/if}}
   </button>
-  <div class="dropdown-menu">
+  <div class="dropdown-menu {{#if pullright}}dropdown-menu-right{{/if}}">
     {{#each dropdownList}}
       <a class="dropdown-item" href="#">{{this}}</a>
     {{/each}}
