--- a/source/_patterns/basics/dropdowns/02-dropdown-styles.hbs
+++ b/source/_patterns/basics/dropdowns/02-dropdown-styles.hbs
@@ -1,6 +1,8 @@
+{{> basics-dropdown dropdownText= "On Right" btnClass="btn-primary" pullright=true }}
 {{> basics-dropdown dropdownText= "Primary" btnClass="btn-primary" }}
 {{> basics-dropdown dropdownText= "Secondary" btnClass="btn-secondary" }}
 {{> basics-dropdown dropdownText= "Success" btnClass="btn-success" }}
 {{> basics-dropdown dropdownText= "Info" btnClass="btn-info" }}
 {{> basics-dropdown dropdownText= "Warning" btnClass="btn-warning" }}
 {{> basics-dropdown dropdownText= "Danger" btnClass="btn-danger" }}
+{{> basics-dropdown isKebab= true }}
