--- a/source/_patterns/components/03-cards/00-card.hbs
+++ b/source/_patterns/components/03-cards/00-card.hbs
@@ -1,40 +1,51 @@
 
-<div class="card {{#if textcenter}}text-xs-center{{/if}} {{#if multiselect}}card-pf-view-multi-select{{/if}}">
+<div class="card {{#if textCenter}}text-xs-center{{/if}} {{#if cardAccent}}pf-card--accented{{/if}} {{#if multiselect}}pf-card--multiselect{{/if}}">
 {{#if cardHeader}}
-  <div class="card-header">
+  <div class="card-header {{#if multiselect}}pf-card--multiselect__header{{/if}}">
+    {{#if multiselect}}
+      <div class="pf-card__checkbox">
+        <input type="checkbox">
+      </div>
+    {{/if}}
     {{#if cardKebab}}
       {{> basics-dropdown isKebab=true pullright=true }}
     {{/if}}
-    <{{cardTitleSize}} class="card-title">{{cardTitle}}</{{cardTitleSize}}>
+    {{#if cardHeaderDropdown}}
+      {{> basics-dropdown dropdownText="Dropdown" pullright=true }}
+    {{/if}}
+    <{{cardTitleSize}} class="card-title">{{{cardTitle}}}</{{cardTitleSize}}>
   </div>
   <div class="card-block">
 {{else}}
-  <div class="card-block">
+  <div class="card-block {{#if multiselect}}pf-card--multiselect__block{{/if}}">
     {{#if multiselect}}
-      <div class="card-pf-view-checkbox">
+      <div class="pf-card__checkbox">
         <input type="checkbox">
       </div>
     {{/if}}
     {{#if cardTitleIconLarge}}
-      <div class="pf-card__top-element">
         {{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--lg" }}
-      </div>
     {{/if}}
     {{#if cardTitleIconMedium}}
-      <div class="pf-card__top-element">
         {{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--md" }}
-      </div>
     {{/if}}
     {{#if cardKebab}}
       {{> basics-dropdown isKebab=true pullright=true }}
     {{/if}}
-    <{{cardTitleSize}} class="card-title">{{cardTitle}}</{{cardTitleSize}}>
+    <{{cardTitleSize}} class="card-title">{{{cardTitle}}}</{{cardTitleSize}}>
 {{/if}}
+{{#if @partial-block}}
+  {{> @partial-block}}
+{{else}}
     <p class="card-text">{{{cardContents}}}</p>
+{{/if}}
   </div>
 {{#if cardFooter}}
   <div class="card-footer text-muted">
-    {{cardFooterContents}}
+    {{#if cardFooterDropdown}}
+      {{> basics-dropdown dropdownText="Dropdown" pullright=true }}
+    {{/if}}
+    {{{cardFooterContents}}}
   </div>
 {{/if}}
 </div>
