--- a/source/_patterns/basics/01-buttons/00-button.hbs
+++ b/source/_patterns/basics/01-buttons/00-button.hbs
@@ -1,1 +1,6 @@
-<button class="btn {{ btnClass }}" aria-labelledby="{{ btnAriaLabelledby }}">{{ btnText }}</button>
+<button class="btn {{ btnClass }}" aria-labelledby="{{ btnAriaLabelledby }}">
+ {{#if @partial-block}}
+   {{> @partial-block }}
+ {{/if}}
+ {{ btnText }}
+</button>
