--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -27,6 +27,7 @@
 @import "node_modules/bootstrap/scss/list-group";
 @import "node_modules/bootstrap/scss/responsive-embed";
 @import "node_modules/bootstrap/scss/close";
+@import "pf-component-view-selector";
 @import "pf-shame";
 
 // Components w/ JavaScript
