removed kebab variation from the dropdown pattern, removed kebab pattern and multiselection from card pattern, and included utility classes to add margin-bottom to the icons in the card

--- a/source/_patterns/basics/dropdowns/00-dropdown.hbs
+++ b/source/_patterns/basics/dropdowns/00-dropdown.hbs
@@ -1,10 +1,6 @@
-<div class="dropdown {{ dropdownState }} {{#if isKebab}}pf-dropdown__kebab{{/if}} {{#if pullright}}pull-right{{/if}}" aria-labelledby="{{ dropdownAriaLabelledby }}">
-  <button type="button" class="btn {{#if isKebab}}btn-link{{else}}{{ btnClass }}{{/if}}  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    {{#if isKebab}}
-      <span class="fa fa-ellipsis-v"></span>
-    {{else}}
-      {{ dropdownText }}
-    {{/if}}
+<div class="dropdown {{ dropdownState }} {{#if pullright}}pull-right{{/if}}" aria-labelledby="{{ dropdownAriaLabelledby }}">
+  <button type="button" class="btn {{ btnClass }} dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    {{ dropdownText }}
   </button>
   <div class="dropdown-menu {{#if pullright}}dropdown-menu-right{{/if}}">
     {{#each dropdownList}}
