--- a/source/_patterns/components/03-cards/00-card.hbs
+++ b/source/_patterns/components/03-cards/00-card.hbs
@@ -1,15 +1,7 @@
 
-<div class="card {{#if textCenter}}text-xs-center{{/if}} {{#if cardAccent}}pf-card--accented{{/if}} {{#if multiselect}}pf-card--multiselect{{/if}}">
+<div class="card pf-card {{#if textCenter}}text-xs-center{{/if}} {{#if cardAccent}}pf-card--accented{{/if}}">
 {{#if cardHeader}}
-  <div class="card-header {{#if multiselect}}pf-card--multiselect__header{{/if}}">
-    {{#if multiselect}}
-      <div class="pf-card__checkbox">
-        <input type="checkbox">
-      </div>
-    {{/if}}
-    {{#if cardKebab}}
-      {{> basics-dropdown isKebab=true pullright=true }}
-    {{/if}}
+  <div class="card-header">
     {{#if cardHeaderDropdown}}
       {{> basics-dropdown dropdownText="Dropdown" pullright=true }}
     {{/if}}
@@ -17,20 +9,12 @@
   </div>
   <div class="card-block">
 {{else}}
-  <div class="card-block {{#if multiselect}}pf-card--multiselect__block{{/if}}">
-    {{#if multiselect}}
-      <div class="pf-card__checkbox">
-        <input type="checkbox">
-      </div>
-    {{/if}}
+  <div class="card-block">
     {{#if cardTitleIconLarge}}
-        {{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--lg" }}
+        {{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--lg mb-pf-lg" }}
     {{/if}}
     {{#if cardTitleIconMedium}}
-        {{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--md" }}
-    {{/if}}
-    {{#if cardKebab}}
-      {{> basics-dropdown isKebab=true pullright=true }}
+        {{> basics-icon iconFamily="pficon" iconName="pficon-middleware" iconModifier="pf-icon--circle pf-icon--md mb-pf-md" }}
     {{/if}}
     <{{cardTitleSize}} class="card-title">{{{cardTitle}}}</{{cardTitleSize}}>
 {{/if}}
