Places items in toolbars

--- a/source/_patterns/components/toolbar/main-toolbar.hbs
+++ b/source/_patterns/components/toolbar/main-toolbar.hbs
@@ -1,14 +1,16 @@
 <div class="row pf-toolbar">
-    <div class="pf-toolbar__group">
-      <span>{{> basics-dropdown dropdownText= "Name" btnClass="btn-secondary" }}{{> basics-input}}
-</span>
-      <span>{{> basics-dropdown dropdownText= "Name" btnClass="btn-secondary" }}
-</span>
-      <span>buttons</span>
-    </div>
+    <ul class="list-inline pf-toolbar__group">
+      <div class="pf-toolbar__group__item"><!-- this dropdown needs to be inline -->{{> basics-dropdown dropdownText= "Name" btnClass="btn-secondary" }}{{> basics-input}}</div>
+      <div class="pf-toolbar__group__item">{{> basics-dropdown dropdownText= "Name" btnClass="btn-secondary" }}</div>
+      <div class="pf-toolbar__group__item">buttons</div>
+    </ul>
 
     <div class="pf-toolbar__group">
-      {{> basics-icon-button btnText="" btnClass="btn-link" iconFamily="fa" iconName="fa-search" iconModifier="" ariaLabeledBy="Search"}}
-      {{> components-view-selector }}
+      <div class="pf-toolbar__group__item">
+        {{> basics-icon-button btnText="" btnClass="btn-link" iconFamily="fa" iconName="fa-search" iconModifier="" ariaLabeledBy="Search"}}
+      </div>
+      <div class="pf-toolbar__group__item">
+        {{> components-view-selector }}
+      </div>
     </div>
 </div><!-- /row -->
