--- a/source/_patterns/components/toolbar/filter-toolbar.hbs
+++ b/source/_patterns/components/toolbar/filter-toolbar.hbs
@@ -2,17 +2,9 @@
   <div class="pf-toolbar__group">
       <h5>40 Results</h5>
       <p>Active filters:</p>
-      {{> components-filter-list }}
 
-
-      <p><a href="#">Clear All Filters</a></p>
-  </div><!-- pf-toolbar__group -->
-
-    <div class="pf-toolbar__group">
-      <h5>40 Results</h5>
-      <p>Active filters:</p>
-      {{> components-filter-list }}
-
+{{!-- IMPORTANT NOTE: This is a copy of filter-list.hbs as a temporary workaround. When a handlebars helper is created as a solution to using listitems, this should be replaced with the following: --}}
+{{!-- {{> components-filter-list }} --}}
       <ul class="list-inline" style="border:1px solid red;">
         {{# listitems.five }}
           <li class="list-inline-item">
