Fills in the rest of the toolbar pieces

--- a/source/_patterns/components/filter-list/filter-list.hbs
+++ b/source/_patterns/components/filter-list/filter-list.hbs
@@ -1,4 +1,4 @@
-<ul class="list-inline" style="border: 1px solid green;">
+<ul class="list-inline">
   {{# listitems.five }}
     <li class="list-inline-item">
       {{> basics-tag tagText=word tagClass="tag-info" tagDismissable="true" }}
