--- a/source/_patterns/components/toolbar/filter-toolbar.hbs
+++ b/source/_patterns/components/toolbar/filter-toolbar.hbs
@@ -1,19 +1,19 @@
 <div class="row pf-toolbar">
   <div class="pf-toolbar__group">
-      <h5>40 Results</h5>
-      <p>Active filters:</p>
+      <h5 class="pf-toolbar__subgroup__item">40 Results</h5>
+      <p class="pf-toolbar__subgroup__item">Active filters:
 
 {{!-- IMPORTANT NOTE: This is a copy of filter-list.hbs as a temporary workaround. When a handlebars helper is created as a solution to using listitems, this should be replaced with the following: --}}
 {{!-- {{> components-filter-list }} --}}
-      <ul class="list-inline" style="border:1px solid red;">
-        {{# listitems.five }}
-          <li class="list-inline-item">
-            {{> basics-tag tagText=word tagClass="tag-info" tagDismissable="true" }}
-          </li>
-        {{/ listitems.five }}
+        <ul class="list-inline">
+          {{# listitems.five }}
+            <li class="list-inline-item">
+              {{> basics-tag tagText=word tagClass="tag-info" tagDismissable="true" }}
+            </li>
+          {{/ listitems.five }}
       </ul>
-
-      <p><a href="#">Clear All Filters</a></p>
+      </p>
+      <p class="pf-toolbar__subgroup__item"><a href="#">Clear All Filters</a></p>
     </div><!-- pf-toolbar__right -->
 
   </div><!-- /col -->
