adds hacky demo card template

--- a/source/_patterns/components/03-cards/00-card.hbs
+++ b/source/_patterns/components/03-cards/00-card.hbs
@@ -1,5 +1,5 @@
 
-<div class="card pf-card {{#if textCenter}}text-xs-center{{/if}} {{#if cardAccent}}pf-card--accented{{/if}}">
+<div class="card pf-card {{#if textCenter}}text-xs-center{{/if}} {{#if cardAccent}}pf-card--accented{{/if}}" tabindex="1">
 {{#if cardHeader}}
   <div class="card-header">
     {{#if cardHeaderDropdown}}
