--- a/source/scss/_pf-component-masthead.scss
+++ b/source/scss/_pf-component-masthead.scss
@@ -6,9 +6,12 @@
   background: $color-pf-black-1000;
   border-top: 4px solid $color-pf-blue-300;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding-right: ($grid-gutter-width-base / 2);
   padding-left: ($grid-gutter-width-base / 2);
+  padding-top: $pf-spacer-xxxs;
+  padding-bottom: $pf-spacer-xxxs;
 }
 
 // This div goes to the left
@@ -17,11 +20,20 @@
 
 // This div goes to the right
 .pf-masthead__utilities{
+
+  .nav{
+      font-size: .9em;
+      display: flex;
+      .nav-item + .nav-item,
+      .nav-link + .nav-link {
+        margin-left: 0;
+      }
+  }
 }
 
 // this is the list itself:
 .pf-utilities {
-  display: flex;
+
 //  align-items: center;
 }
 
@@ -32,16 +44,4 @@
 //  margin: 0;
   padding-left: $pf-spacer-xxs;
   padding-right: $pf-spacer-xxs;
-}
-
-.pf-masthead__navicon{
-
-}
-
-
-.pf-utilities {
-  .nav-item + .nav-item,
-  .nav-link + .nav-link {
-    margin-left: 0;
-  }
 }
