--- a/source/_patterns/components/03-cards/01-card-footer-dropdown.hbs
+++ b/source/_patterns/components/03-cards/01-card-footer-dropdown.hbs
@@ -1,1 +1,1 @@
-{{> components-card cardTitleSize="h4" cardTitle="Card Footer with Dropdown" cardContents="This card has a Footer and a dropdown menu in the footer." cardFooter=true cardFooterContents="Card Footer" cardFooterDropdown=true }}
+{{> components-card cardTitleSize="h4" cardTitle="Card Footer with Dropdown" cardContents="This card has a Footer and a dropdown menu in the footer." cardFooter=true cardFooterContents="<p>Card Footer</p>" cardFooterDropdown=true }}
