--- a/source/_patterns/components/03-cards/01-card-footer.hbs
+++ b/source/_patterns/components/03-cards/01-card-footer.hbs
@@ -1,1 +1,1 @@
-{{> components-card cardTitleSize="h4" cardTitle="Card with Footer" cardContents="This card has a Footer." textCenter=true cardFooter=true cardFooterContents="Card Footer"}}
+{{> components-card cardTitleSize="h4" cardTitle="Card with Footer" cardContents="This card has a Footer." textCenter=true cardFooter=true cardFooterContents="<p>Card Footer</p>"}}
